After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762420 - avidemux: Fix buffer memory leak
avidemux: Fix buffer memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.6.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
1.6.4
Depends on:
Blocks:
 
 
Reported: 2016-02-22 00:10 UTC by Vineeth
Modified: 2016-04-14 17:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix buffer memory leak (956 bytes, patch)
2016-02-22 00:11 UTC, Vineeth
committed Details | Review

Description Vineeth 2016-02-22 00:10:29 UTC
buffer being mapped is not being unmapped in some cases
Comment 1 Vineeth 2016-02-22 00:11:20 UTC
Created attachment 321799 [details] [review]
fix buffer memory leak
Comment 2 Sebastian Dröge (slomo) 2016-02-22 08:16:44 UTC
commit 7150b89c59b22e2b73d2926ed7ac0d35dfd3b9e5
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Mon Feb 22 09:09:01 2016 +0900

    avidemux: Fix buffer memory leak
    
    buffer being mapped is not being unmapped in some cases
    
    https://bugzilla.gnome.org/show_bug.cgi?id=762420